# bitcoinrtx-old

./: .gitignore  COPYING  INSTALL  LICENSE  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoinrtx_find_bdb48.m4  bitcoinrtx_qt.m4  bitcoinrtx_subdir_to_include.m4
contrib/: README.md  bitcoinrtx-qt.pro  bitcoinrtxd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoinrtx-qt.desktop  bitcoinrtx-qt.install  bitcoinrtx-qt.lintian-overrides  bitcoinrtx-qt.protocol  bitcoinrtxd.bash-completion  bitcoinrtxd.examples  bitcoinrtxd.install  bitcoinrtxd.lintian-overrides  bitcoinrtxd.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/init/: README.md  bitcoinrtxd.conf  bitcoinrtxd.openrc  bitcoinrtxd.openrcconf  bitcoinrtxd.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  (+1 more)
depends/: Makefile  README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bitcoinrtx-cli-res.rc  bitcoinrtx-cli.cpp  bitcoinrtx-tx.cpp  bitcoinrtxd-res.rc  bitcoinrtxd.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  (+85 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinrtx.cpp  bitcoinrtx.qrc  bitcoinrtx_locale.qrc  bitcoinrtxaddressvalidator.cpp  bitcoinrtxaddressvalidator.h  bitcoinrtxamountfield.cpp  bitcoinrtxamountfield.h  bitcoinrtxgui.cpp  bitcoinrtxgui.h  bitcoinrtxstrings.cpp  bitcoinrtxunits.cpp  bitcoinrtxunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  (+62 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoinrtx_ach.ts  bitcoinrtx_af_ZA.ts  bitcoinrtx_ar.ts  bitcoinrtx_be_BY.ts  bitcoinrtx_bg.ts  bitcoinrtx_bs.ts  bitcoinrtx_ca.ts  bitcoinrtx_ca@valencia.ts  bitcoinrtx_ca_ES.ts  bitcoinrtx_cmn.ts  bitcoinrtx_cs.ts  bitcoinrtx_cy.ts  bitcoinrtx_da.ts  bitcoinrtx_de.ts  bitcoinrtx_el_GR.ts  bitcoinrtx_en.ts  bitcoinrtx_eo.ts  bitcoinrtx_es.ts  bitcoinrtx_es_CL.ts  bitcoinrtx_es_DO.ts  bitcoinrtx_es_MX.ts  bitcoinrtx_es_UY.ts  bitcoinrtx_et.ts  bitcoinrtx_eu_ES.ts  bitcoinrtx_fa.ts  bitcoinrtx_fa_IR.ts  bitcoinrtx_fi.ts  bitcoinrtx_fr.ts  bitcoinrtx_fr_CA.ts  bitcoinrtx_gl.ts  bitcoinrtx_gu_IN.ts  bitcoinrtx_he.ts  bitcoinrtx_hi_IN.ts  bitcoinrtx_hr.ts  bitcoinrtx_hu.ts  bitcoinrtx_id_ID.ts  bitcoinrtx_it.ts  bitcoinrtx_ja.ts  bitcoinrtx_ka.ts  bitcoinrtx_kk_KZ.ts  (+31 more)
src/qt/res/: bitcoinrtx-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: bitcoinrtxconsensus.cpp  bitcoinrtxconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_bitcoinrtx_NativeSecp256k1.c  org_bitcoinrtx_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoinrtx/: NativeSecp256k1.java
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bitcoinrtx-util-test.py  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_bitcoinrtx.cpp  timedata_tests.cpp  transaction_tests.cpp  uint256_tests.cpp  (+2 more)
src/test/data/: README.md  bitcoinrtx-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+101 files in other folders)
